kubernetes-templating/frontend/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: frontend
  name: hipster-shop-ingress
  namespace: hipster-shop
spec:
  rules:
  - host: shop.34.77.85.33.nip.io
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 80
        path: /
